# p2p-signaling

./: .gitignore  README.md  design-qa.md
.github/workflows/: deploy.yml
clients/: Cargo.toml
clients/.cargo/: config.toml
clients/p2p-core/: Cargo.toml
clients/p2p-core/src/: chat_protocol.rs  direct.rs  lib.rs  nat.rs  p2p_proto.rs  platform_dirs.rs  remote_desktop.rs  session.rs  signaling.rs  transfer.rs
clients/p2p-gui/: Cargo.toml
clients/p2p-gui/macos/: Info.plist
clients/p2p-gui/src/: main.rs  remote_desktop.rs  remote_desktop_macos.rs  remote_desktop_windows.rs
scripts/: build-client-macos.sh  build-client-windows.cmd  build-client-windows.ps1  start-client-macos.command  start-client-macos.sh  start-client-windows.cmd  start-client-windows.ps1  windows-client-common.ps1
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
