[package]
name = "p2p-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "5"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "native-tls"] }
uuid = { version = "1", features = ["v4"] }
