[package]
name = "p2p-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = { version = "0.35", default-features = false, features = ["glow"] }
p2p-core = { path = "../p2p-core" }
rfd = { version = "0.17.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
