[package]
name = "p2p-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = { version = "0.35", default-features = false, features = ["glow"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
p2p-core = { path = "../p2p-core" }
rfd = { version = "0.17.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
