[package]
name = "p2p-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = { version = "0.35", default-features = false, features = ["glow"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
p2p-core = { path = "../p2p-core" }
rfd = { version = "0.17.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", default-features = false, features = ["alloc"] }
dispatch2 = { version = "0.3.1", default-features = false, features = ["alloc", "objc2"] }
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
  "CFCGTypes",
  "objc2",
] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = [
  "CGDirectDisplay",
  "CGError",
  "CGEvent",
  "CGEventTypes",
  "CGRemoteOperation",
  "CGWindow",
] }
objc2-core-media = { version = "0.3.2", default-features = false, features = [
  "CMSampleBuffer",
  "CMTime",
  "objc2",
  "objc2-core-video",
] }
objc2-core-video = { version = "0.3.2", default-features = false, features = [
  "CVBase",
  "CVBuffer",
  "CVImageBuffer",
  "CVReturn",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSArray",
  "NSError",
  "NSObject",
  "NSString",
  "std",
] }
objc2-screen-capture-kit = { version = "0.3.2", default-features = false, features = [
  "SCShareableContent",
  "SCStream",
  "block2",
  "dispatch2",
  "objc2-core-graphics",
  "objc2-core-media",
  "std",
] }
